   to absolute links.

 * Updated the Cleaner to support custom allowed protocols such as "cid:" and "data:".
   <https://github.com/jhy/jsoup/issues/127>

 * Fixed handling of null characters within comments.
   <https://github.com/jhy/jsoup/issues/121>

 * Tweaked escaped entity detection in attributes to not treat &entity_... as an entity form.
   <https://github.com/jhy/jsoup/issues/129>

*** Release 1.6.1 [2011-Jul-02]
 * Fixed Java 1.5 compatibility.
   <https://github.com/jhy/jsoup/issues/103>

 * Fixed an issue when parsing <script> tags in body where the tokeniser wouldn't switch to the InScript state, which
   meant that data wasn't parsed correctly.
   <https://github.com/jhy/jsoup/issues/104>

 * Fixed an issue with a missing quote when serialising DocumentType nodes.
   <https://github.com/jhy/jsoup/issues/109>

 * Fixed issue where a single 0 character was lexed incorrectly as a null character.
   <https://github.com/jhy/jsoup/issues/107>

 * Fixed normalisation of carriage returns to newlines on input HTML.
   <https://github.com/jhy/jsoup/issues/110>

 * Disabled memory mapped files when loading files from disk, to improve compatibility in Windows environments.

*** Release 1.6.0 [2011-Jun-13]
 * HTML5 conformant parser. Complete reimplemenation of HTML tokenisation and parsing, to implement the
   http://whatwg.org/html spec. This ensures jsoup parses HTML identically to current modern browsers.

 * When parsing files from disk, files are loaded via memory mapping, to increase parse speed.

 * Reduced memory overhead and lowered garbage collector pressure with Attribute, Node and Element model optimisations.

 * Improved "abs:" absolute URL handling in Elements.attr("abs:href") and Node.hasAttr("abs:href").
   <https://github.com/jhy/jsoup/issues/97>

 * Fixed cookie handling issue in jsoup.Connect where empty cookies would cause a validation exception.
   <https://github.com/jhy/jsoup/issues/87>
