@@ -18,6 +18,8 @@ jsoup changelog
  * Tweaked escaped entity detection in attributes to not treat &entity_... as an entity form.
    <https://github.com/jhy/jsoup/issues/129>
 
+ * Fixed doctype tokeniser to allow whitespace between name and public identifier.
+
 *** Release 1.6.1 [2011-Jul-02]
  * Fixed Java 1.5 compatibility.
    <https://github.com/jhy/jsoup/issues/103>
